2001-01-25  Andy Hertzfeld  <andy@eazel.com>

	* libnautilus-extensions/nautilus-thumbnails.c:
	(make_thumbnail_path):
	fixed bug 5817, removing the extension from images makes their
	thumbnails show up.  Fixed by correcting where it tests for the
	presence of an extension in make_thumbnail_path by only looking
	for periods in the leaf part of the path instead of in the
	entire path.
	
2001-01-25  Darin Adler  <darin@eazel.com>

	* README: Add missing xml-i18n-tools to list of modules
	needed to build from cvs.

2001-01-25  Laszlo Kovacs  <laszlo.kovacs@sun.com>

	* break in Eazel-hacking build when Scrollkeeper is
	  enabled inside the Nautilus component is fixed now

2001-01-25  John Sullivan  <sullivan@eazel.com>

	reviewed by: Pavel Cisler <pavel@eazel.com>

	Tweaked the recent menu-updating speedup.

	* src/file-manager/fm-directory-view.c:
	(remove_update_menus_timeout_callback): New helper function,
	removes timeout callback if non-zero.
	(fm_directory_view_destroy): Use helper function where it was
	calling the guts directly.
	(update_menus_if_pending): New function, does nothing if
	no menu update is pending, otherwise removes callback and
	does an update now.
	(fm_directory_view_pop_up_selection_context_menu),
	(fm_directory_view_pop_up_background_context_menu): Use
	update_menus_if_pending instead of directly updating. This both
	avoids an unnecessary update if none is pending and prevents an 
	unnecessary future update is one is pending.

2001-01-25  Laszlo Kovacs  <laszlo.kovacs@sun.com>

	* added various changes to the hyperbola component,
	  some of these are Scrollkeeper related and disabled
	  as Scrollkeeper is not in Eazel-hacking yet
	  Scrollkeeper related changes:
	    - remove empty branches for Scrollkeeper generated
	      category tree
	    - remove old way of populating of the Applications
	      branch with the Gnome help docs
	    - fixing bug in code that goes around alphabetical
	      ordering of section titles 